[package]
name = "optimization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = "0.10.0"
argmin_testfunctions = "0.2.0"
argmin-math = { version = "0.4", features = ["ndarray_latest"] }
argmin-observer-slog = "0.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
cobyla = "0.6.0"
csv = "1.3.0"
indexmap = "2.6.0"
ndarray = "0.16.1"
reqwest = { version="0.12.9", features=["json", "blocking"] }
serde = { version = "1.0.214", features=["derive"] }
serde_json = "1.0.132"
good_lp = {version="1.10.0", features=["clarabel"], default-features = false }
float_eq = "1.0.1"
